--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.stats.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.level-item/m.level-item.stats.scss
@@ -39,7 +39,7 @@
 
     > .title {
       @extend .mb-4;
-      font-weight: var(--font-weight-700);
+      font-weight: var(--kyanite-weight-bold);
     }
 
     > .button.is-ghost {
