--- a/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
+++ b/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
@@ -40,7 +40,7 @@
     @extend .p-2;
 
     font-size: var(--font-size-14);
-    font-weight: var(--font-weight-700);
+    font-weight: var(--kyanite-weight-bold);
     color: var(--color-grey--900) !important;
 
     word-wrap: break-word;
