KYAN-180 adjust BlogArticleAuthorBio styles for AuthorBio page

--- a/applications/common/frontend/src/components/BlogArticleAuthorBio/BlogArticleAuthorBio.scss
+++ b/applications/common/frontend/src/components/BlogArticleAuthorBio/BlogArticleAuthorBio.scss
@@ -21,4 +21,13 @@
 
 .blog-article-author-bio {
   @include article-author-bio.m-article-author-bio;
+  .image {
+    margin-bottom: 0 !important;
+  }
+}
+
+.template-authorbiopage {
+  .blog-article-author-bio {
+    border-top: none;
+  }
 }
