--- a/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
+++ b/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
@@ -41,7 +41,7 @@
 
     font-size: var(--font-size-14);
     font-weight: var(--kyanite-weight-bold);
-    color: var(--color-grey--900) !important;
+    color: var(--kyanite-grey-darker) !important;
 
     word-wrap: break-word;
 
@@ -59,13 +59,13 @@
     @extend .p-0, .pr-6_1;
 
     border-top: var(--border-weight-1) solid;
-    border-color: var(--color-grey--300) !important;
-    background-color: var(--color-grey--100);
+    border-color: var(--kyanite-grey-90) !important;
+    background-color: var(--kyanite-white-bis);
 
     > code {
       @extend .px-5;
 
-      background-color: var(--color-grey--100) !important; // overwrite hljs (highlight.js)
+      background-color: var(--kyanite-white-bis) !important; // overwrite hljs (highlight.js)
     }
   }
 
@@ -84,23 +84,23 @@
     margin-top: var(--spacing-4);
 
     /* Color */
-    color: var(--color-grey--900);
+    color: var(--kyanite-grey-darker);
 
     /* Others */
     cursor: pointer;
 
     @include breakpoint.media-breakpoint-large {
-      color: var(--color-grey--300);
+      color: var(--kyanite-grey-90);
     }
   }
 
   @include breakpoint.media-breakpoint-large {
     // icon - on container hover
     &:hover > .code-snippet__icon {
-      color: var(--color-grey--900);
+      color: var(--kyanite-grey-darker);
 
       &:hover {
-        color: var(--color-primary--600);
+        color: var(--kyanite-primary);
       }
     }
   }
@@ -132,8 +132,8 @@
     );
 
     /* Colors */
-    background-color: var(--color-primary--600);
-    color: var(--color-primary--100);
+    background-color: var(---kyanite-primary);
+    color: var(--kyanite-primary-100);
 
     /* Text */
     text-align: center;
@@ -166,7 +166,7 @@
         rotate(45deg);
 
       /* Colors */
-      background-color: var(--color-primary--600);
+      background-color: var(--kyanite-primary);
 
       /* Others */
       content: ' ';
