--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.animated-underline-link.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.animated-underline-link.scss
@@ -26,7 +26,7 @@
   border: none;
 
   &::after {
-    background-color: var(--color-primary--600);
+    background-color: var(--kyanite-primary);
     content: '';
     display: block;
     margin-top: 3px;
