--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.article-thumbnail/m.article-thumbnail.scss
@@ -24,7 +24,7 @@
 @use 'src/atomic-design-system/00-token/t.border';
 
 @mixin m-article-thumbnail {
-  color: var(--color-grey--900) !important;
+  color: var(--kyanite-grey-darker) !important;
   @extend .mb-5_4;
 
   .content {
@@ -39,7 +39,7 @@
 
     .title {
       @extend .mb-4;
-      color: var(--color-grey--900) !important;
+      color: var(--kyanite-grey-darker) !important;
     }
   }
 
@@ -61,17 +61,17 @@
 
   .content-info-details {
     .author-content {
-      color: var(--color-grey--900) !important;
+      color: var(--kyanite-grey-darker) !important;
       @extend .pr-5;
     }
 
     .date-content {
-      color: var(--color-grey--700) !important;
+      color: var(--kyanite-grey-40) !important;
       @extend .pr-3;
     }
 
     .time-content {
-      color: var(--color-grey--700) !important;
+      color: var(--kyanite-grey-40) !important;
     }
   }
 }
