--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.message/m.message.scss
@@ -22,70 +22,70 @@
 
 @mixin m-message {
   // "None" variant, base for the other variants
-  border-color: var(--color-grey--400) !important;
+  border-color: var(--kyanite-light);
   border-left: var(--border-weight-3) solid;
   border-radius: var(--border-radius-2);
 
   box-shadow: 0 0.2rem 0.5rem rgb(0 0 0 / 5%), 0 0 0.05rem rgb(0 0 0 / 10%);
 
   .message-header {
-    color: var(--color-grey--900) !important;
-    background-color: var( --color-grey--200) !important;
+    color: var(--kyanite-grey-darker) !important;
+    background-color: var(--kyanite-text-95);
     border-top-left-radius: var(--border-weight-0);
   }
 
   .message-body {
-    color: var(--color-grey--900) !important;
+    color: var(--kyanite-grey-darker);
 
     border: none;
     background-color: #FFF;
   }
 
   &.is-primary {
-    border-color: var(--color-primary--400) !important;
+    border-color: var(--kyanite-primary-50);
 
     .message-header {
-      background-color: var(--color-primary--100) !important;
+      background-color: var(--kyanite-primary-100);
     }
   }
 
   &.is-link {
-    border-color: var(--color-link--400) !important;
+    border-color: var(--kyanite-link-50);
 
     .message-header {
-      background-color: var(--color-link--100) !important;
+      background-color: var(--kyanite-link-100);
     }
   }
 
   &.is-info {
-    border-color: var(--color-info--400) !important;
+    border-color: var(--kyanite-info-50);
 
     .message-header {
-      background-color: var(--color-info--100) !important;
+      background-color: var(--kyanite-info-100);
     }
   }
 
   &.is-success {
-    border-color: var(--color-success--400) !important;
+    border-color: var(--kyanite-success-50);
 
     .message-header {
-      background-color: var(--color-success--100) !important;
+      background-color: var(--kyanite-success-100);
     }
   }
 
   &.is-warning {
-    border-color: var(--color-warning--400) !important;
+    border-color: var(--kyanite-warning-50);
 
     .message-header {
-      background-color: var(--color-warning--100) !important;
+      background-color: var(--kyanite-warning-100);
     }
   }
 
   &.is-danger {
-    border-color: var(--color-danger--400) !important;
+    border-color: var(--kyanite-danger-50);
 
     .message-header {
-      background-color: var(--color-danger--100) !important;
+      background-color: var(--kyanite-danger-100);
     }
   }
 }
