--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.progress-bar/m.progress-bar.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.progress-bar/m.progress-bar.scss
@@ -19,16 +19,16 @@
 @mixin m-progressbar {
 
   &.is-primary::-webkit-progress-value {
-    background-color: var(--color-primary--600)
+    background-color: var(--kyanite-primary)
   }
   &.is-primary::-moz-progress-bar {
-    background-color: var(--color-primary--600)
+    background-color: var(--kyanite-primary)
   }
   &.is-primary::-ms-fill {
-    background-color: var(--color-primary--600)
+    background-color: var(--kyanite-primary)
   }
   &.is-primary:indeterminate {
-    background-image: -webkit-gradient(linear, left top, right top, color-stop(30%, var(--color-primary--600)), color-stop(30%, #ededed));
-    background-image: linear-gradient(90deg, var(--color-primary--600) 30%, #ededed 0)
+    background-image: -webkit-gradient(linear, left top, right top, color-stop(30%, var(--kyanite-primary)), color-stop(30%, #ededed));
+    background-image: linear-gradient(90deg, var(--kyanite-primary) 30%, #ededed 0)
   }
 }
