--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.navbar/o.navbar.scss
@@ -23,7 +23,7 @@
 @use 'src/atomic-design-system/01-atom/a.animated-underline-link' as link;
 @use 'src/atomic-design-system/00-token/t.font' as font;
 
-$color-navbar-link: var(--color-grey--900);
+$color-navbar-link: var(--kyanite-grey-darker);
 
 @mixin o-navbar {
   // causes the element to establish a containing block for all descendants (used for fixed-position descendants)
@@ -37,10 +37,6 @@ $color-navbar-link: var(--color-grey--900);
       background-color: var(--kyanite-custom-navbar-dropdown-item-background-hover);
       color: var(--kyanite-custom-navbar-dropdown-item-text-hover);
     }
-  }
-
-  &.is-primary {
-    background-color: var(--color-primary--600);
   }
 
   &.is-transparent {
@@ -308,9 +304,9 @@ $color-navbar-link: var(--color-grey--900);
   }
 
   .label-megadropdown {
-    color: var(--color-grey--900);
+    color: var(--kyanite-grey-darker);
     &:hover {
-      color: var(--color-grey--900);
+      color: var(--kyanite-grey-darker);
     }
   }
 
@@ -389,7 +385,7 @@ $color-navbar-link: var(--color-grey--900);
           font-size: var(--font-size-16);
           font-weight: var(--kyanite-weight-semibold);
           line-height: var(--line-height-150);
-          color: var(--color-grey--500);
+          color: var(--kyanite-grey-60);
         }
 
         // distance between elements:
