--- a/applications/common/frontend/src/components/Image/Image.scss
+++ b/applications/common/frontend/src/components/Image/Image.scss
@@ -19,10 +19,9 @@
 @use 'sass:map';
 
 @use 'src/atomic-design-system/01-atom/a.image' as image;
-@use 'src/atomic-design-system/00-token/t.color' as color;
 
 $color-shadow-start: rgba(#000, 0.06);
-$color-shadow-end: rgba(var(--color-shadow--1), 0.07);
+$color-shadow-end: rgba(#605e78, 0.07);
 
 .image {
   @include image.a-image;
