--- a/applications/common/frontend/src/components/Separator/Separator.scss
+++ b/applications/common/frontend/src/components/Separator/Separator.scss
@@ -53,7 +53,7 @@
     }
 
     hr {
-        background-color: var(--color-grey--300);
+        background-color: var(--kyanite-grey-90);
         width: 100%;
         border: none;
         height: 1px;
