KYAN-217 new color system

--- a/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
@@ -66,15 +66,15 @@ $map_t-color-by-id: (
   grey--100: #f9f9fa, // 240, 9%, 98% --kyanite-white-bis
   grey--200: #f2f3f5, // 220, 13%, 95% --kyanite-text-95 / grey-95
 
-  
-  grey--300: #e1e1e1, // 0, 0%, 88%  --kyanite-grey-90
-  grey--400: #bbbbbb, // 0,0,73%  - light / grey-70
-  grey--500: #959595, // 0,0,58% grey-60
-  grey--600: #7f7f7f, // 0deg,0%,50% grey-50
-  grey--700: #686868, // 0,0,41% --kyanite-grey-40
-  grey--800: #494949, // 0deg, 0%, 29% - dark / --kyanite-grey-30
-  grey--900: #2a2a2a, // 0deg, 0%, 16% --kyanite-grey-darker
-  grey--1000: #181818, // 0deg, 0%, 9% --kyanite-grey-10
+
+  grey--300: #e1e1e1, // 0, 0%, 88%  --kyanite-gray-90
+  grey--400: #bbbbbb, // 0,0,73%  --kyanite-gray-70
+  grey--500: #959595, // 0,0,58% --kyanite-gray-60
+  grey--600: #7f7f7f, // 0deg,0%,50% --kyanite-gray-50
+  grey--700: #686868, // 0,0,41% --kyanite-gray-40
+  grey--800: #494949, // 0deg, 0%, 29%  --kyanite-gray-30
+  grey--900: #2a2a2a, // 0deg, 0%, 16% --kyanite-gray-15
+  grey--1000: #181818, // 0deg, 0%, 9% --kyanite-gray-10
   //
 
 // --kyanite-black-bis: #14161a;
