--- a/applications/common/frontend/src/atomic-design-system/02-molecule/m.panel/m.panel.scss
+++ b/applications/common/frontend/src/atomic-design-system/02-molecule/m.panel/m.panel.scss
@@ -20,7 +20,7 @@
 
   .panel-tabs {
     a.is-active {
-      color: var(--kyanite-grey-darker);
+      color: var(--kyanite-gray-15);
     }
   }
 
