--- a/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
+++ b/applications/common/frontend/src/atomic-design-system/03-organism/o.footer/o.footer.scss
@@ -54,7 +54,7 @@
   }
 
   .content,
-  .content.has-text-grey-darker {
+  .content.has-text-gray-15 {
     color: var(--kyanite-footer-color) !important;
 
     &.is-small {
