--- a/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
+++ b/applications/common/frontend/src/components/CodeSnippet/codesnippet.scss
@@ -41,7 +41,7 @@
 
     font-size: var(--font-size-14);
     font-weight: var(--kyanite-weight-bold);
-    color: var(--kyanite-grey-darker) !important;
+    color: var(--kyanite-gray-15) !important;
 
     word-wrap: break-word;
 
@@ -59,7 +59,7 @@
     @extend .p-0, .pr-6_1;
 
     border-top: var(--border-weight-1) solid;
-    border-color: var(--kyanite-grey-90) !important;
+    border-color: var(--kyanite-gray-90) !important;
     background-color: var(--kyanite-white-bis);
 
     > code {
@@ -84,20 +84,20 @@
     margin-top: var(--spacing-4);
 
     /* Color */
-    color: var(--kyanite-grey-darker);
+    color: var(--kyanite-gray-15);
 
     /* Others */
     cursor: pointer;
 
     @include breakpoint.media-breakpoint-large {
-      color: var(--kyanite-grey-90);
+      color: var(a90);
     }
   }
 
   @include breakpoint.media-breakpoint-large {
     // icon - on container hover
     &:hover > .code-snippet__icon {
-      color: var(--kyanite-grey-darker);
+      color: var(--kyanite-gray-15);
 
       &:hover {
         color: var(--kyanite-primary);
