--- a/applications/common/frontend/src/components/Navbar/Navbar.scss
+++ b/applications/common/frontend/src/components/Navbar/Navbar.scss
@@ -20,10 +20,10 @@
 
 .navbar {
   --kyanite-navbar-background-color: var(--kyanite-white);
-  --kyanite-navbar-burger-color: var(--kyanite-grey-40);
+  --kyanite-navbar-burger-color: var(--kyanite-gray-40);
   
   --kyanite-custom-navbar-megamenu-background: var(--kyanite-white-bis);
-  --kyanite-custom-navbar-item-color-hover: var(--kyanite-grey-darker);
+  --kyanite-custom-navbar-item-color-hover: var(--kyanite-gray-15);
   --kyanite-custom-navbar-dropdown-item-background-hover: #f5f5f5;
   --kyanite-custom-navbar-dropdown-item-text-hover: #0a0a0a;
 
