KYAN-217 new color system - corrections, fix tag

--- a/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
+++ b/applications/common/frontend/src/atomic-design-system/00-token/t.color/t.color.scss
@@ -15,7 +15,7 @@
  *     limitations under the License.
  * -->
  */
-
+// TODO to be removed
 $map_t-color-ids: (
   'primary',
   'secondary',
@@ -38,7 +38,7 @@ $map_t-color-by-id: (
   primary--800: #003299, // primary-30
   primary--900: #002166, // primary-20
   primary--1000: #001133,// primary-10 
-                          // primary-00 - black
+                           // primary-00 - black
   //
   secondary--50: #EFFEFB,
   secondary--100: #C7FFF5,
