--- a/applications/common/frontend/src/atomic-design-system/01-atom/a.tag.scss
+++ b/applications/common/frontend/src/atomic-design-system/01-atom/a.tag.scss
@@ -22,26 +22,17 @@
 @use 'src/variables-helpers';
 
 @mixin a-tag-default-color {
-  background-color: var(--kyanite-custom-tag-background);
-  color: var(--kyanite-custom-tag-text);
+  &:not(.is-primary, .is-secondary, .is-success, .is-danger, .is-warning, .is-info, .is-link, .is-dark, .is-light, .is-info, .is-white) {
+    background-color: var(--kyanite-custom-tag-background);
+    color: var(--kyanite-custom-tag-text);
+  }
 }
 
 /* default tag style */
 @mixin a-tag-default {
 
   &:not(body) {
-
     @include a-tag-default-color;
-
-    &.is-primary {
-
-      background-color: var(--kyanite-primary);
-
-      &.is-light {
-        background-color: var(--kyanite-primary-100);
-        color: var(--kyanite-primary);
-      }
-    }
   }
 }
 
